--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -16,8 +16,9 @@
     </div>
 
     <div id="background-wrapper">
-        <app-pc-window randomPlace>
+        <app-pc-window randomPlace controls="help;full">
             <p slot="title">HAHAHA</p>
+            <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hollande.jpg">
             <p>Je suis fonctinneeuodoeudeodeeeeeeeeeeeeeeeeeeeeeeeeuiiiiiiiiiiiiiiieeeeeeeeeeeeel</p>
             <p>Je suis fonctinnel</p>
             <p>Je suis fonctinnel</p>
