--- a/src/pages/enroll/enroll.scss
+++ b/src/pages/enroll/enroll.scss
@@ -2,7 +2,7 @@
 @import '../../core/scss/constants';
 
 body {
-  background: url('/assets/images/bg.gif');
+  background: url('/assets/images/backgrounds/bean-2.gif');
   background-size: cover;
 }
 
