--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -37,6 +37,6 @@
 #background-wrapper {
   height: 100%;
   width: 100%;
-  background-image: url("/assets/images/bean.gif");
+  background-image: url("/assets/images/background/bean.gif");
   background-size: cover;
 }
