--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -32,6 +32,7 @@
 <div id="background-wrapper">
 	<div id="task-bar">
 		<div id="start-button"><img src="assets/images/icons/w95-icon.png">Start</div>
+		<div id="time"></div>
 	</div>
 </div>
 
