fix deepth window

--- a/src/pages/index/index.ejs
+++ b/src/pages/index/index.ejs
@@ -1,11 +1,10 @@
-<%= require('../../core/parts/header.ejs')({title: 'Welcome'}) %>
+<%= require('../../core/parts/header.ejs')({title: 'SEEK THE TRUTH'}) %>
       <a href="#quizz">Goto quizz</a>
       <a href="#enroll">Goto enroll</a>
       <a href="#hacked">Goto hacked</a>
 
       <app-overlay id="intro-overlay">
-            <p>Congratulation, you arrived here</p>
-            <button>Click me</button>
+            <h1>Things are hidden away</h1>
       </app-overlay>
 
       <app-overlay id="goto-fullscreen-overlay" hidden>
