--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -13,6 +13,11 @@
   justify-content: center;
   align-content: center;
 
+  .window-buttons {
+    display: inline-grid;
+    grid-auto-flow: column;
+  }
+
   #q-test1 button:not(.control) {
     background-position-x: 0;
     background-position-y: 0;
@@ -37,6 +42,6 @@
 #background-wrapper {
   height: 100%;
   width: 100%;
-  background-image: url("/assets/images/background/bean.gif");
+  background-image: url("/assets/images/backgrounds/bean.gif");
   background-size: cover;
 }
