--- a/src/shared/custom-elements/pc-window/pc-window.scss
+++ b/src/shared/custom-elements/pc-window/pc-window.scss
@@ -46,7 +46,7 @@ $base-pad: 4px;
   display: grid;
   align-content: start;
   align-self: start;
-  background-color: #d1f2ff;
+  background-color: $background;
   padding: $base-pad;
   max-width: 500px;
 
