--- a/src/core/scss/_constants.scss
+++ b/src/core/scss/_constants.scss
@@ -4,3 +4,6 @@ $color-primary: blue;
 $default-w95-bg: #007C7D;
 $default-w95-window-bg: #BABABA;
 $border: outset 2px;
+
+$arrow-cursor: url('/assets/images/icons/arrow-white-cursor.cur'), auto;
+$hand-cursor: url('/assets/images/icons/hand-cursor.cur'), auto;
