--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -4,6 +4,7 @@
 #background-wrapper,
 #foreground-wrapper {
   display: grid;
+  cursor: $arrow-cursor;
 }
 
 #foreground-wrapper {
@@ -85,6 +86,8 @@ justify-content: space-between;
     justify-content: center;
     margin-left: 6px;
     border: $border;
+    cursor: $hand-cursor;
+    
 
       img {
         height: 20px;
