--- a/src/core/scss/_styles.scss
+++ b/src/core/scss/_styles.scss
@@ -14,3 +14,8 @@ body {
 body {
   font-family: "Inconsolata", monospace;
 }
+
+#snoopa-vision-f11 {
+  border: 1px solid white;
+  padding: 10px;
+}
