--- a/src/shared/custom-elements/overlay/overlay.scss
+++ b/src/shared/custom-elements/overlay/overlay.scss
@@ -7,6 +7,7 @@ app-overlay {
   grid-auto-flow: row;
   justify-content: center;
   align-content: center;
+  text-align: center;
   height: 100vh;
   width: 100vw;
   color: white;
