quizz and hacked

--- a/src/pages/hacked/hacked.ejs
+++ b/src/pages/hacked/hacked.ejs
@@ -2,4 +2,18 @@
  <p>Hacked page</p>
 <%= require('../../core/parts/footer.ejs')() %>
 
-<iframe src="https://geekprank.com/apple/" width="" height="" allow="fullscreen"></iframe>
+<iframe id="prank" src="https://geekprank.com/apple/" width="" height="" allow="fullscreen"></iframe>
+
+<div id="background-wrapper">
+    <div id="blue" class="background-color"></div>
+    <div id="pink" class="background-color"></div>
+</div>
+<div id="foreground-wrapper">
+    <div id="iphone-container">
+            <div id="iphone">
+                    <iframe width="556" height="408" src="https://www.youtube.com/embed/LmhIizQQol0?controls=0&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+                </div>
+    </div>
+    
+    
+</div>
