--- a/src/pages/quizz/quizz.ejs
+++ b/src/pages/quizz/quizz.ejs
@@ -48,6 +48,10 @@
 		<img src="assets/images/icons/recycle-bin.png" alt="">
 		<span>Recycle Bin</span>
 	</div>
+	<div class="desktop-icon" id="flight-simulator">
+		<img src="assets/images/icons/flight-simulator.png" alt="">
+		<span>Flight Simulator 95 crack.exe</span>
+	</div>
 	<div id="task-bar">
 		<div id="start-button"><img src="assets/images/icons/w95-icon.png">Start</div>
 		<div id="time"></div>
