--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -20,6 +20,7 @@
   }
 
   #q-test1 button:not(.control) {
+    cursor: $hand-cursor;
     background-position-x: 0;
     background-position-y: 0;
     background-repeat: repeat;
@@ -46,8 +47,12 @@
   background-color:$default-w95-bg;
   background-image: url("/assets/images/logos/microsoft95logo.png");
   background-size: 175px;
-  background-position: center center;
-  background-repeat: no-repeat;
+background-position: center center;
+background-repeat: no-repeat;
+grid-template-columns: repeat(6 , 1fr);
+grid-template-rows: auto;
+place-items: center;
+align-content: flex-start;
 
   .desktop-icon {
     display: grid;
@@ -55,6 +60,12 @@ grid-auto-flow: row;
 grid-template-columns: 80px;
 place-items: center;
 margin: 10px;
+cursor: $hand-cursor !important;
+grid-gap: 10px;
+
+.desktop-icon:hover {
+  border: 1px dotted black;
+}
 
     img{
       width: 78%;
@@ -65,6 +76,7 @@ margin: 10px;
       word-wrap: break-word;
       font-size: 14px;
       width: 100%;
+      text-align: center;
     }
   }
 
