--- a/src/shared/custom-elements/pc-window/pc-window.scss
+++ b/src/shared/custom-elements/pc-window/pc-window.scss
@@ -77,6 +77,7 @@ $base-pad: 4px;
       .icon {
         width: 20px;
         height: 20px;
+        
 
         img {
           width: 20px;
@@ -107,10 +108,9 @@ $base-pad: 4px;
         background-color: $base;
         margin-left: $base-pad;
         padding: 0;
+        cursor: $hand-cursor;
 
         @include base-shadow(2px);
-
-        cursor: pointer;
 
         @include hover-reverse;
       }
