--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -13,10 +13,10 @@
     <button id="join-btn">Join the anti-coffee society</button>
 </div>
 
-<app-pc-window hidden id="timer" randomPlace>
+<app-pc-window hidden id="window-timer" randomPlace>
     <p slot="title">HAHAHA</p>
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hollande.jpg">
-    <p>TODO TIMER</p>
+    <p>Time left: <span id="timer">50</span></p>
 </app-pc-window>
 
 <app-pc-window hidden id="window-firstname" randomPlace>
@@ -24,6 +24,20 @@
     <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hollande.jpg">
     <p>Enter your name: </p>
     <input type="text" id="form-firstname" maxlength="10">
+</app-pc-window>
+
+<app-pc-window hidden id="window-lastname" randomPlace>
+    <p slot="title">HAHAHA</p>
+    <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hollande.jpg">
+    <p>Lastname, now. </p>
+    <input type="text" id="form-lastname" maxlength="10">
+</app-pc-window>
+
+<app-pc-window hidden id="window-birthdate" randomPlace>
+    <p slot="title">HAHAHA</p>
+    <img slot="icon" src="<%= htmlWebpackPlugin.options.assetsUrl %>images/hollande.jpg">
+    <p>Are you over 18 ?</p>
+    <input type="date" id="form-birthdate" maxlength="10">
 </app-pc-window>
 
 <%= require('../../core/parts/footer.ejs')() %>
