--- a/src/pages/enroll/elements/agent-card/agent-card.ejs
+++ b/src/pages/enroll/elements/agent-card/agent-card.ejs
@@ -15,7 +15,8 @@
         <p id="citation"></p>
         <img src="<%= assetsUrl %>images/barcode.png">
     </div>
-    <div id="signature">
+    <div id="signature" hidden>
         <p>Signature</p>
+        <img id="signature-img">
     </div>
 </div>
