--- a/src/pages/enroll/enroll.ejs
+++ b/src/pages/enroll/enroll.ejs
@@ -34,4 +34,9 @@
     <input type="date" id="form-birthdate" maxlength="10">
 </app-pc-window>
 
+<app-pc-window hidden id="window-signature" randomPlace>
+    <p>Enter your signature:</p>
+</app-pc-window>
+
+
 <%= require('../../core/parts/footer.ejs')() %>
