--- a/src/pages/hacked/hacked.ejs
+++ b/src/pages/hacked/hacked.ejs
@@ -1,7 +1,7 @@
 <%= require('../../core/parts/header.ejs')({title: 'astnhbaoesxnktb'}) %>
 
 <div id="prank">
-    <iframe id="mac-crash" src="https://geekprank.com/apple/" width="" height="" allow="fullscreen"></iframe>
+    <iframe id="mac-crash" src="https://geekprank.com/fake-dos/" width="" height="" allow="fullscreen"></iframe>
 
 </div>
 
@@ -14,7 +14,7 @@
     <div id="jackie-quote">
         <style>
             @import url('https://fonts.googleapis.com/css?family=Gochi+Hand');
-        </style> 
+        </style>
         <span id="quote">"Coffee is a language in itself"</span>
         <span id="author">Jackie Chan</span>
     </div>
@@ -31,10 +31,10 @@
     </div>
     <div id="iphone-container">
             <div id="iphone">
-                    <iframe width="556" height="408" src="https://www.youtube.com/embed/LmhIizQQol0?controls=0&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+                    <iframe width="556" height="408" src="https://www.youtube.com/embed/LmhIizQQol0?controls=0&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
     </div>
-    
-    
+
+
 </div>
 <%= require('../../core/parts/footer.ejs')() %>
