--- a/src/pages/quizz/quizz.scss
+++ b/src/pages/quizz/quizz.scss
@@ -97,6 +97,10 @@
     }
   }
 
+  #netscape-planet {
+    display: none;
+  }
+
   .window-buttons {
     display: inline-grid;
     grid-auto-flow: column;
