update hacked scenarios

--- a/src/pages/hacked/hacked.ejs
+++ b/src/pages/hacked/hacked.ejs
@@ -1,7 +1,7 @@
 <%= require('../../core/parts/header.ejs')({title: 'astnhbaoesxnktb'}) %>
 
 <div id="prank">
-    <iframe id="mac-crash" src="https://geekprank.com/fake-dos/" width="" height="" allow="fullscreen"></iframe>
+    <iframe id="mac-crash" src="" width="" height="" allow="fullscreen"></iframe>
 
 </div>
 
