Enroll agent card design update

--- a/src/pages/enroll/elements/agent-card/agent-card.ejs
+++ b/src/pages/enroll/elements/agent-card/agent-card.ejs
@@ -1,4 +1,8 @@
 <div id="agent-card-top">
+    <div id="lanyard">
+      <img src="<%= assetsUrl %>images/lanyard.png" alt="">
+    </div>
+    <img id="agent-icon" src="<%= assetsUrl %>images/icons/secret-agent.png" alt="">
     <div id="agent-picture">
         <img id="agent-picture-img" src="<%= assetsUrl %>images/blob.jpeg">
     </div>
@@ -8,7 +12,7 @@
         <h3 class="label-badge" id="firstname">Firstname: <span id="badge-fname"></span></h3>
         <h3 class="label-badge" id="lastname" hidden>Lastname: <span id="badge-lname"></span></h3>
         <h3 class="label-badge" id="birthdate" hidden>Birth date: <span id="badge-bdate"></span></h3>
-    </div> 
+    </div>
 </div>
 <div id="agent-card-bottom">
     <div id="citation-container">
